--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
@@ -9,15 +11,20 @@ click==8.1.7
 colorama==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
+distro==1.9.0
 filelock==3.16.1
 fonttools==4.54.1
 fsspec==2024.9.0
 gdown==5.2.0
 gitdb==4.0.11
 GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 huggingface-hub==0.25.2
 idna==3.8
 Jinja2==3.1.4
+jiter==0.6.1
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -30,12 +37,15 @@ mpmath==1.3.0
 narwhals==1.6.0
 networkx==3.4.1
 numpy==2.1.0
+openai==1.52.0
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 plotly==5.24.1
 protobuf==5.28.0
 pyarrow==17.0.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.2.0
@@ -54,6 +64,7 @@ scipy==1.14.1
 seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 soupsieve==2.6
 streamlit==1.39.0
 sympy==1.13.3
